more changes to installer

--- a/install/service/agrobot.service
+++ b/install/service/agrobot.service
@@ -2,7 +2,7 @@
 Description=Starts Agrobot
 
 [Service]
-User=caioslpp
+User=labiot
 Type=oneshot
 RemainAfterExit=yes
 ExecStart=/usr/bin/start_agrobot.sh
